# magnetic-coherent-states-python

./: .gitignore  CITATION.cff  PROJECT_PLAN.md  README.md  paper_summary.md  pyproject.toml  run_demo.py
docs/: numerical_method.md  paper_summary.md  research_report.md
examples/: classical_guiding_center.py  run_demo.py
experiments/: hbar_sweep.py
outputs/: README.md  research_summary.md
src/magnetic_coherent_states/: __init__.py  cli.py  core.py  plotting.py
src/magnetic_coherent_states.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
